more report changes